<!-- vim: syntax=Markdown -->

# Changelog

## v0.7.0 (upcoming)

**All systems:**
- 🗲 Breaking: Drop support for Python 3.9.
- Fix unresposive window when selecting larger screen regions.

**Windows**:
- Fix crash on `NormCap.exe --help`. ([#783](https://github.com/dynobo/normcap/issues/783))

**Linux**:
- Add notification actions for FlatPak package.

## v0.6.0 (2025-08-31)

**All systems:**
- 🗲 Breaking: Remove commandline argument `--mode {parse,raw}` in favor of a new
argument `--parse-text {True, False}`.
- Add (optional) QR-Code and barcode detection.
- Add option `--screenshot-handler` to explicitly choose among available methods.
- Fix language downloads for some specific languages by falling back to different model type ([#744](https://github.com/dynobo/normcap/issues/744)).

**Windows:**
- Add automatic export of debug logs (when running `normcap.exe -v debug`) to `{DESKTOP_FOLDER}\normcap.log` for easier access.
- Fix crash on start if user directory contains special characters ([#608](https://github.com/dynobo/normcap/issues/608)).

**Linux:**
- 🗲 Breaking: Drop support for Ubuntu 20.04 and Gnome < 41.0
- 🗲 Deprecating: AppImage builds are being deprecated. Even with a lot of effort, it turns out that AppImage is too unreliable.
  (We will still build AppImage for a while, but they might go away any time.)
- Change priority of clipboard handlers: `wl-clipboard` is now lowest priority (as it seems least reliable), below `xsel` and `xclip`. (Please [open an issues](https://github.com/dynobo/normcap/issues/new/choose), if this doesn't work well for you.)
- Add handlers to take screenshots via `gnome-screenshot` or `spectacle`. Should mitigate some issue for screenshots on Wayland (not all!).
- Fix AppImage requires `libcrypt`, which is not the case anymore.
- Fix NormCap not getting focus when moved with Gnome extension "Window Calls"
- Fix trying incompatible screenshot and clipboard handlers in Flatpak.

**MacOS:**
